--- a/client/css/presentation.css
+++ b/client/css/presentation.css
@@ -6,7 +6,7 @@
     right: 5%;
     left: 5%;
 
-    z-index: 2000;
+    z-index: 3;
     overflow: hidden;
 }
 
@@ -88,7 +88,7 @@
 
     opacity: 0;
     cursor: pointer;
-    z-index: 3000;
+    z-index: 4;
 }
 
 .section.slides .previowsArrow {
