--- a/client/css/projects.css
+++ b/client/css/projects.css
@@ -37,7 +37,7 @@
     width: 300px;
     height: 350px;
     margin: 0;
-    border-radius: 5px;
+    border-radius: 8px;
     
     -webkit-transition: all ease .5s;
     -moz-transition: all ease .5s;
@@ -58,7 +58,7 @@
 .project figure .projectBack {
     width: 100%;
     height: 100%;
-    border-radius: 5px;
+    border-radius: 8px;
     
     -webkit-transition: all ease -5s;
     -moz-transition: all ease -5s;
@@ -154,6 +154,9 @@
     right: 0;
     bottom: 0;
     padding: 8px 20px;
+
+    border-bottom-left-radius: 8px;
+    border-bottom-right-radius: 8px;
 }
 
 .project figure .projectBack .publicProject {background: #008000;}
