--- a/client/css/scrollbars.css
+++ b/client/css/scrollbars.css
@@ -1,5 +1,5 @@
 .ps__scrollbar-y-rail {
     margin: 5px 0;
     background-color: transparent!important;
-    z-index: 3000;
+    z-index: 4;
 }
